--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run script
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          FORCE_ANNOUNCE_FIRST_RUN: ${{ vars.FORCE_ANNOUNCE_FIRST_RUN }}
+          FORCE_ANNOUNCE_FIRST_RUN: "true"
         run: python bequiet_tracker_level.py
       - name: Commit state.json (if changed)
         run: |
