--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,24 +2,30 @@ name: Run Tracker
 
 on:
   schedule:
-    - cron: "0 * * * *"   # jede volle Stunde
-  workflow_dispatch:
+    - cron: "0 * * * *"   # jede volle Stunde (UTC)
+  workflow_dispatch: {}
 
 permissions:
   contents: write   # erlaubt commit/push von state.json
+
+concurrency:
+  group: level-tracker
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           persist-credentials: true
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: 'requirements.txt'
 
       - name: Install dependencies
         run: pip install -r requirements.txt
@@ -27,8 +33,8 @@ jobs:
       - name: Run script
         env:
           DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          FORCE_ANNOUNCE_FIRST_RUN: "true"   # sorgt für 1x Meldung der aktuellen Spieler
-          SEND_TEST_MESSAGE: "true"          # zusätzliche Test-Nachricht „✅ Testlauf erfolgreich“
+          FORCE_ANNOUNCE_FIRST_RUN: "false"   # nach dem ersten Run AUS
+          SEND_TEST_MESSAGE: "false"          # keine Testmeldungen
         run: python bequiet_tracker_level.py
 
       - name: Commit state.json (if changed)
